tests/reject/number_literal.alg
sort Nat : Sort;
op z : → Nat;
eq foo z = 0;
